--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>  
+    
     <meta charset="UTF-8">
+    
   </head>
+  <body id="top">
   
-  <body>
-     </div>
-            <hr class="d-print-none"/>
-           <div class="contant-section cover-bg px-3 px-lg-4 pb-4" id="contact" style="border-radius: unset;">
-           <h2 class="h3 text mb-3">Contact</h2>
-           <div class="row">
-           <div class="col-md-7 d-print-none">
-            <div class="my-2"><form action="https://formspree.io/your@email.com" method="POST">
-     <div class="row">
-     <div class="col-6">
-         <input class="form-control" type="text" id="name" name="name" placeholder="Your Name" required>
+    <h2 class="h3 text mb-3">Contact</h2>
+    <div class="row">
+      <div class="col-md-7 d-print-none">
+        <div class="my-2"><form action="https://formspree.io/your@email.com"
+    method="POST">
+  <div class="row">
+    <div class="col-6">
+      <input class="form-control" type="text" id="name" name="name" placeholder="Your Name" required>
     </div>
     <div class="col-6">
-        <input class="form-control" type="email" id="email" name="_replyto" placeholder="Your E-mail" required>
+      <input class="form-control" type="email" id="email" name="_replyto" placeholder="Your E-mail" required>
     </div>
-    </div>
-           <div class="form-group my-2">
-           <textarea class="form-control" style="resize: none;" id="message" name="message" rows="4"  placeholder="Your Message" required></textarea>
-           </div>
-             <button class="btn btn-primary mt-2" type="submit">Send</button>
-       
-   </div>
+  </div>
+  <div class="form-group my-2">
+    <textarea class="form-control" style="resize: none;" id="message" name="message" rows="4"  placeholder="Your Message" required></textarea>
+  </div>
+  <button class="btn btn-primary mt-2" type="submit">Send</button>
+           
   </body>
 </html>
